styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", Arial, Helvetica, sans-serif;
}

body {
  min-width: 350px;
  background-color: #f7e1b5;
}

.section-wrapper {
  padding-left: 4rem;
  padding-right: 4rem;
}

/* ------------Header Start --------------- */
header {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  padding: 2rem 4rem;
  align-items: center;
}

header nav {
  justify-items: center;
}

header ul {
  list-style: none;
  display: flex;
  font-size: 1.3rem;
  gap: 2.3rem;
}

header h2 {
  font-size: 1.8rem;
  font-weight: 500;
}

header a {
  color: black;
  text-decoration: none;
}

.cart-btn {
  background: none;
  border: none;
  cursor: pointer;
}

.burger-btn {
  all: unset;
  width: 2rem;
  height: 2rem;
  cursor: pointer;
  display: none;
}

.burger-btn img {
  width: 2rem;
  height: 2rem;
}

.cart-btn img {
  width: 2.4rem;
  height: 2.4rem;
}
.header-button {
  display: flex;
  justify-content: right;
}
/* <---------------- Header End --------------- */

/* ------------ Horizontal Line --------------- */
hr {
  height: 1px;
  background-color: black;
  border: none;
  width: 95%;
  margin: auto;
}
/* ------------ Horizontal Line --------------- */

/* ------------------Title Section Start-------------- */
.title-section {
  padding-top: 3rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}

.title-section h1 {
  font-size: clamp(2rem, 6vw, 7rem);
  text-align: center;
  font-weight: 500;
}
.title-section img {
  width: 100%;
  height: auto;
  border-radius: 40px;
  object-fit: cover;
}

.title-text {
  width: 80%;
}
/* ------------------Title Section End-------------- */

/* -------------Introduction section--------------- */

.introduction-section {
  display: grid;
  grid-template-columns: 1.8fr 1fr;
  padding-top: 5rem;
  align-items: center;
}

.introduction-section h1 {
  font-size: clamp(2rem, 6vw, 6rem);
  text-align: center;
  font-weight: 500;
}

.introduction-section-text {
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.introduction-section-text p {
  font-size: 1.1rem;
  line-height: 1.6rem;
}

.button {
  width: 150px;
  padding: 0.8rem 1.2rem;
  border-radius: 30px;
  border: 2px solid #000;
  background: transparent;
  font-size: 1rem;
  cursor: pointer;

  transition: all 0.1s ease;
  box-shadow: 0 3px 0 #000;
}

.button:hover {
  background-color: #000;
  color: #fff;
}

.introduction-photos {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-items: center;
  padding-top: 6rem;
  gap: 2rem;
}

.introduction-photos-left img {
  width: 100%;
  height: 600px;
  border-radius: 20px;
  object-fit: cover;
}
.introduction-photos-right img {
  width: 100%;
  height: 400px;
  border-radius: 20px;
  object-fit: cover;
}

.introduction-photos-right {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.introduction-photos-right h3 {
  font-size: 1.5rem;
  font-weight: 500;
}

/* -------------Introduction section END--------------- */

/* ------------- Produtcs Section --------------- */

.product-section {
  margin-top: 4rem;
  background-color: rgb(208, 174, 239);
  min-height: 40rem;
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 3fr;
  padding-left: 4rem;
  padding-right: 4rem;
}
.product-section-left {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  gap: 2rem;
}

.product-section-left h2 {
  font-size: clamp(2rem, 6vw, 5rem);
  padding-top: 3rem;
  font-weight: 500;
}

.product-selection {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 0.5rem;
  justify-content: center;
  align-items: center;
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.product-selection img {
  width: 100%;
  height: 100%;
  border-radius: 20px;

  object-fit: cover;
}

.products {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

/* ------------- Produtcs Section End--------------- */

/* --------------advertisement comment section --------------- */

.comment {
  position: relative;
  height: 100vh;
  overflow: hidden;
}

.bg-video {
  position: absolute;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  transform: translate(-50%, -50%);
  object-fit: cover;
  z-index: -1;
}

.comment-section {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: 100vh;
  padding: 6rem 4rem;
}

.comment-section img {
  border-radius: 20px;
  width: 90%;
  height: 700px;
  object-fit: cover;
}

.comment-left {
  display: flex;
  align-items: center;
  justify-content: center;
}

.comment-right {
  color: white;
  display: flex;
  flex-direction: column;
  gap: 3rem;

  text-align: left;
}

.comment-right h1 {
  font-size: clamp(1.5rem, 6vw, 4rem);

  font-weight: 500;
}

/* ----------------- advertisement comment section End --------------- */

/* ----------------- Footer Section --------------- */
footer {
  padding-bottom: 5rem;
}
.footer-title {
  text-align: center;
  padding: 4rem 0;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.footer-title h1 {
  font-size: 5rem;
  font-weight: 500;
}
.instagram-title {
  text-decoration: none;
  border-bottom: 1px solid black;
  padding-bottom: 3px;
  cursor: pointer;
  color: black;
}

.footer-photos {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0.3rem;

  padding-bottom: 4rem;
}

.footer-photos img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  border-radius: 20px;
}

.footer-info {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.footer-info-left {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}
.socials-img a img {
  width: 2rem;
  height: 2rem;
  cursor: pointer;
}
.socials-img {
  display: flex;
  gap: 1.5rem;
}

.footer-info-middle {
  display: flex;
  flex-direction: column;
  padding-left: 4rem;
  justify-content: center;
}
.footer-info-middle ul {
  list-style: none;
}
.footer-info-middle a {
  color: black;

  font-weight: 500;
}

.footer-info-right {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.newsletter-form input {
  padding: 0.75rem 1rem;
  font-size: 1rem;
  border: 1px solid #ccc;

  width: 250px;
}

.order-1 {
  order: 1;
}
.order-2 {
  order: 2;
}
.order-3 {
  order: 3;
}

@media (max-width: 768px) {
  .header-navigation {
    display: none;
  }

  .burger-btn {
    display: inline-block;
  }

  .introduction-section {
    grid-template-columns: 1fr;
    gap: 2rem;
  }

  .introduction-photos {
    grid-template-columns: 1fr;
    gap: 2rem;
  }
  .product-section {
    grid-template-columns: 1fr;
    gap: 2rem;
  }

  .product-selection {
    grid-template-columns: 1fr;
    gap: 2rem;
  }

  .comment-section {
    grid-template-columns: 1fr;
    gap: 2rem;
  }
  .comment-left img {
    height: 300px;
  }

  .footer-photos {
    grid-template-columns: 1fr 1fr;
    gap: 0.5rem;
  }

  .footer-info {
    grid-template-columns: 1fr 1fr;
    gap: 4rem;
  }

  .footer-info {
    display: flex;
    flex-direction: column;
    gap: 2rem;
  }

  .footer-info-right button {
    margin-top: 2rem;
  }

  .footer-info-middle {
    padding-left: 0;
  }
}

